[package]
name = "plutils"
version = "0.1.0"
edition = "2021"

[lib]
name = "plutils"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "*", features = ["polars-ops", "dtype-struct"]  }
polars-ops = { version = "0.52.0", features = ["cum_agg"] }
pyo3 = { version = "*", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
