[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "plutils"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.8.2",
    "pyarrow>=22.0.0",
]


[tool.uv]
cache-keys = [
  {file = "pyproject.toml"},
  {file = "rust/Cargo.toml"},
  {file = "**/*.rs"},
]
config-settings = { build-args = '--profile=dev' }

# [tool.maturin]
# profile = "release"
