[build-system]
requires = ["oryn~=2.1"]
build-backend = "oryn"

[project]
name = "plplugins"
version = "1.1"
description = "Collection of utilities for working with Polars"
license = "EUPL-1.2"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "polars~=1.36",
    "pyarrow>=22.0.0",
]

[project.urls]
Repository = "https://github.com/slietar/plplugins"

[tool.oryn]
abi = "abi3"
interpreter = "cp312"
include = ["src/*"]

[[tool.oryn.distributions]]
name = "macos"
platform = "macosx_14_0_arm64"
overrides = { "src/plplugins/extension.abi3.so" = "rust/target/aarch64-apple-darwin/release/libplplugins.dylib" }

[[tool.oryn.distributions]]
name = "linux-x86_64"
platform = "manylinux2014_x86_64"
overrides = { "src/plplugins/extension.abi3.so" = "rust/target/x86_64-unknown-linux-gnu/release/libplplugins.so" }

[[tool.oryn.distributions]]
name = "linux-aarch64"
platform = "manylinux2014_aarch64"
overrides = { "src/plplugins/extension.abi3.so" = "rust/target/aarch64-unknown-linux-gnu/release/libplplugins.so" }

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "**/*.rs" },
]
