[package]
name = "plplugins"
version = "0.0.0"
edition = "2021"

[lib]
name = "plplugins"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "*", features = ["dtype-array", "dtype-struct", "polars-ops"]  }
polars-compute = { version = "0.52.0" }
polars-ops = { version = "0.52.0", features = ["cum_agg"] }
pyo3 = { version = "*", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }

[build-dependencies]
pyo3-build-config = "0.27.2"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
